<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_onboarding_scene"
    tools:context=".view.start.onboarding.OnBoardingActivity">

  <TextView
      android:id="@+id/textView2"
      android:layout_width="365dp"
      android:layout_height="91dp"
      android:fontFamily="@font/notomedium"
      android:text="@string/Onboard_title"
      android:textAlignment="center"
      android:textSize="30sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.457" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:fontFamily="@font/notoregular"
      android:text="@string/Onboard_subtitle"
      android:textSize="16sp"
      app:layout_constraintEnd_toEndOf="parent"
      tools:layout_editor_absoluteY="589dp" />

  <ImageButton
      android:id="@+id/imageButton"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#00FFFFFF"
      android:scaleType="fitXY"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/ic_arrow_up"
      tools:layout_editor_absoluteY="535dp"
      android:contentDescription="@string/Onboard_indicator1" />

  <ImageButton
      android:id="@+id/imageButton2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#00FFFFFF"
      android:scaleType="fitXY"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:srcCompat="@drawable/ic_arrow_up"
      tools:layout_editor_absoluteY="535dp"
      android:contentDescription="@string/Onboard_indicator2" />

  <ImageButton
      android:id="@+id/imageButton3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="#00FFFFFF"
      android:scaleType="fitXY"
      app:srcCompat="@drawable/ic_arrow_up"
      tools:layout_editor_absoluteX="143dp"
      tools:layout_editor_absoluteY="535dp"
      android:contentDescription="@string/Onboard_indicator3" />

  <include
      android:id="@+id/include_layout1"
      layout="@layout/layout_board1"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <include
      android:id="@+id/include2"
      layout="@layout/layout_board2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:layout_constraintTop_toTopOf="parent"
      tools:layout_editor_absoluteX="23dp" />

  <include
      android:id="@+id/include"
      layout="@layout/layout_board3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      tools:layout_editor_absoluteY="40dp" />

  <TextView
      android:id="@+id/tvlogin"
      android:layout_width="365dp"
      android:layout_height="91dp"
      android:fontFamily="@font/notomedium"
      android:text="@string/Onboard_final"
      android:textAlignment="center"
      android:textSize="40sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.457" />


</androidx.constraintlayout.motion.widget.MotionLayout>